feat: casmel spirit and spirit type, env added to the docker compose

--- a/.env.example
+++ b/.env.example
@@ -2,3 +2,12 @@ NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY=
 CLERK_SECRET_KEY=
 CLERK_SIGN_IN_URL=/sign-in             # optional overrides
 CLERK_SIGN_UP_URL=/sign-up
+
+
+# Credenciales de tu usuario IAM de AWS
+AWS_ACCESS_KEY_ID="TU_ACCESS_KEY_DE_IAM"
+AWS_SECRET_ACCESS_KEY="TU_SECRET_KEY_DE_IAM"
+
+# Tu bucket de S3
+AWS_S3_BUCKET_NAME="nombre-de-tu-bucket-en-s3"
+AWS_S3_REGION="us-east-1" # O la región donde está tu bucket
