feat: colo improved face detection / seeders, banquet function and time slot function

--- a/.env.example
+++ b/.env.example
@@ -11,3 +11,5 @@ AWS_SECRET_ACCESS_KEY="TU_SECRET_KEY_DE_IAM"
 # Tu bucket de S3
 AWS_S3_BUCKET_NAME="nombre-de-tu-bucket-en-s3"
 AWS_S3_REGION="us-east-1" # O la región donde está tu bucket
+
+ENV="development"
