--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,11 @@
 NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY=
 CLERK_SECRET_KEY=
+CLERK_WEBHOOK_SECRET=
 CLERK_SIGN_IN_URL=/sign-in             # optional overrides
 CLERK_SIGN_UP_URL=/sign-up
 
+# JWT Secret for admin authentication
+JWT_SECRET_KEY=your-secret-key-change-in-production
 
 # Credenciales de tu usuario IAM de AWS
 AWS_ACCESS_KEY_ID="TU_ACCESS_KEY_DE_IAM"
