feat(tests): add unit tests and CI for backend
- feat: add pytest tests and conftest under dogo-onsen-backend/project/tests
- chore: add Docker tests service, requirements-dev and entrypoint for backend
- chore: add GitHub Actions workflows for backend
- chore: update READMEs with test/run instructions

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -36,6 +36,19 @@ services:
     depends_on:
       - db
 
+  tests:
+    build: ./project
+    command: ["/bin/sh", "-c", "sh /usr/src/app/tests/entrypoint.sh"]
+    volumes:
+      - ./project:/usr/src/app
+      - ./project/tests:/usr/src/app/tests
+    env_file:
+      - ./.env
+    environment:
+      - PYTHONUNBUFFERED=1
+    depends_on:
+      - db
+
 volumes:
   pgadmin-data:
     driver: local
