--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,6 +12,7 @@ services:
       - ./.env
     environment:
       - DATABASE_URL=postgresql+asyncpg://postgres:postgres@db:5432/foo
+      - DB_ECHO=False # Para evitar muchos logs en consola y reducir el tiempo
     depends_on:
       - db
 
