--- a/.github/workflows/performance-tests.yml
+++ b/.github/workflows/performance-tests.yml
@@ -4,12 +4,28 @@ on:
   workflow_dispatch:
   push:
     paths:
-      - 'tests/performance/**'
+      - 'project/tests/performance/**'
       - '.github/workflows/performance-tests.yml'
 
 jobs:
   performance-test:
     runs-on: ubuntu-latest
+    
+    services:
+      postgres:
+        image: postgres:15
+        env:
+          POSTGRES_USER: postgres
+          POSTGRES_PASSWORD: postgres
+          POSTGRES_DB: test_db
+        ports:
+          - 5432:5432
+        options: >-
+          --health-cmd pg_isready
+          --health-interval 10s
+          --health-timeout 5s
+          --health-retries 5
+
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
@@ -25,13 +41,15 @@ jobs:
           pip install uvicorn
 
       - name: Start Backend Server
+        env:
+          DATABASE_URL: postgresql+asyncpg://postgres:postgres@localhost:5432/test_db
         run: |
           cd project
           # Run uvicorn in background
           uvicorn app.main:app --host 0.0.0.0 --port 8000 &
           # Wait for server to be ready
           echo "Waiting for server to start..."
-          sleep 10
+          sleep 15
 
       - name: Setup k6
         uses: grafana/setup-k6-action@v1
@@ -43,5 +61,5 @@ jobs:
           K6_CLOUD_PROJECT_ID: ${{ secrets.K6_CLOUD_PROJECT_ID }}
           BASE_URL: http://localhost:8000
         with:
-          path: tests/performance/load_test.js
+          path: project/tests/performance/load_test.js
           cloud-run-locally: true
