won't work, just for merge purposes

--- a/.env.example
+++ b/.env.example
@@ -16,3 +16,7 @@ AWS_S3_BUCKET_NAME="nombre-de-tu-bucket-en-s3"
 AWS_S3_REGION="us-east-1" # O la región donde está tu bucket
 
 ENV="development"
+
+# K6 Cloud configuration
+K6_CLOUD_TOKEN=
+K6_CLOUD_PROJECT_ID=
